# AI-Career-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_RULES.md  CHANGELOG.md  Makefile  PROJECT.md  TASKS.md  docker-compose.yml
backend/: README.md  collect_jobs.py  main.py  pyproject.toml  requirements.txt
backend/app/: README.md
backend/app/agents/: README.md  llm.py
backend/app/api/: README.md  dependencies.py
backend/app/collectors/: README.md  __init__.py  base.py  config.py  exceptions.py  lifecycle.py  logging.py  models.py  registry.py  retry.py
backend/app/core/: README.md  loader.py
backend/app/db/: README.md  __init__.py  session.py
backend/app/extractors/: __init__.py  base.py  config.py  description_extractor.py  extractor_registry.py  field_mapper.py  html_cleaner.py  job_extractor.py  location_extractor.py  metadata_extractor.py  salary_extractor.py
backend/app/parsers/: README.md  __init__.py  base.py  company_parser.py  config.py  employment_type_parser.py  experience_parser.py  location_parser.py  metadata_parser.py  models.py  registry.py  salary_parser.py  title_parser.py
backend/app/parsing/: __init__.py  (+10 more)
backend/tests/: README.md  conftest.py  test_apply_agent.py  test_ashby_collector.py  test_ats_checker.py  test_collect_jobs.py  test_extractors.py  test_greenhouse_collector.py  test_integration.py  test_jd_analyzer.py  test_job_api.py  test_job_repository.py  test_lever_collector.py  test_parsers.py  test_remoteok_collector.py  test_resume_tailor.py  test_scraping_engine.py  test_tracker.py  test_workday_collector.py
(+197 files in other folders)
